# TransJLC-GUI

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md
.github/workflows/: ci.yml
i18n/: app.yaml
src/: archive.rs  colorful.rs  config.rs  converter.rs  error.rs  gerber.rs  lib.rs  main.rs  patterns.rs  progress.rs
src/colorful/: encrypt.rs  mask.rs  mod.rs  svg.rs  types.rs
tests/: colorful_encryption.rs  integration_tests.rs  mask_parse.rs
tests/data/colorful/: Fabrication_ColorfulBottomSilkscreen.FCBS  Fabrication_ColorfulTopSilkscreen.FCTS
tests/data/mask/: Gerber_TopSolderMaskLayer.GTS
