[package]
name = "TransJLC"
version = "0.3.0"
authors = ["HalfSweet <HalfSweet@HalfSweet.cn>"]
edition = "2021"
repository = "https://github.com/HalfSweet/TransJLC"

license = "MIT"
description = "TransJLC is a tool for converting Gerber files from other EDAs to JLCEDA style"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive"] }
indicatif = "0.17"
lazy_static = "1.5.0"
md-5 = "0.10.5"
rand = "0.8.5"
regex = "1.10.4"
rust-embed = { version = "8.4.0", features = ["debug-embed"] }
tempfile = "3.8.1"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
zip = "2.1.6"
