[package]
name = "TransJLC"
version = "0.3.2"
authors = ["HalfSweet <HalfSweet@HalfSweet.cn>"]
edition = "2021"
repository = "https://github.com/HalfSweet/TransJLC"

license = "Apache-2.0"
description = "TransJLC is a tool for converting Gerber files from other EDAs to JLCEDA style"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4.42"
clap = { version = "4.5.52", features = ["derive"] }
indicatif = "0.17"
lazy_static = "1.5.0"
md-5 = "0.10.6"
rand = "0.8.5"
regex = "1.12.2"
rust-embed = { version = "8.9.0", features = ["debug-embed"] }
tempfile = "3.23.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
zip = "2.4.2"
base64 = "0.22"
aes-gcm = "0.10"
rsa = { version = "0.9", features = ["sha2", "pem"] }
sha2 = "0.10"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "tiff", "ico"] }
xmlwriter = "0.1"
gerber_parser = "0.3"
gerber-types = "0.6"

[dev-dependencies]
